--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@media (max-width: 900px) and (min-width: 768px) and (max-height: 1440px) and (min-height: 1024px){
+
+
 canvas {
   width: 100vw;
   height: 100vh;
@@ -243,4 +246,7 @@ a:hover{
 
 .contact:hover{
   cursor: pointer;
+}
+
+
 }
