--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@media (max-width: 900px) and (min-width: 768px) and (max-height: 1440px) and (min-height: 1024px){
+/* @media (max-width: 900px) and (min-width: 768px) and (max-height: 1440px) and (min-height: 1024){ */
 
 
 canvas {
@@ -249,4 +249,4 @@ a:hover{
 }
 
 
-}
+/* } */
