--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@media (max-width: 900px) and (min-width: 768px) and (max-height: 1440px) and (min-height: 1024){
-
 
 canvas {
   width: 100vw;
@@ -118,6 +116,7 @@ p{
 
 a{
   font-family: 'IBM Plex Mono', monospace;
+  text-decoration: none;
 }
 
 /* navbar */
@@ -249,4 +248,4 @@ a:hover{
   cursor: pointer;
 }
 
-}
+/* mouse */
